# rusty-games

./: README.md
minesweeper/: Cargo.toml  index.html
minesweeper/src/: lib.rs  minesweeper.rs
snake/: Cargo.toml  index.html
snake/src/: lib.rs  snake.rs
tetris/: Cargo.toml  index.html
tetris/src/: lib.rs  shape.rs  tetris.rs
tictactoe/: Cargo.toml  index.html
tictactoe/src/: lib.rs  main.rs
