[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = {version = "0.2.7", features = ["js"]}
wasm-bindgen = "0.2.81"
js-sys = "0.3.58"

[dependencies.web-sys]
version = "0.3.58"
features = ["Window", "console", "Document", "Element", "HtmlElement",
 "CssStyleDeclaration", "HtmlDivElement","KeyboardEvent"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false